Fixed an issue where the header only had 15px of spacing instead of 30
- Reduced some of the spacing between language and nav items at 901px
- Removed the left/right padding from the list global eyebrow

--- a/cfgov/unprocessed/css/organisms/header.less
+++ b/cfgov/unprocessed/css/organisms/header.less
@@ -89,9 +89,19 @@
         > .wrapper {
             // TODO: remove when Capital Framework is updated to 3.x.x. on outdated consumerfinance.gov projects.
             position: initial;
-          
+
             > .m-global-search {
                 float: right;
+
+                // Mobile size.
+                .respond-to-max( @bp-xs-max, {
+                    margin-right: -15px;
+                } );
+
+                // Tablet size.
+                .respond-to-range( @bp-sm-min, @bp-sm-max {
+                    margin-right: -30px;
+                } );
             }
         }
 
